src/objects/Audit_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Audit_Field_Name__c</fullName>
        <description>This picklist will store name of field that needs to be audited</description>
        <label>Audit Field Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Original Prescription</fullName>
                </value>
                <value>
                    <fullName>Approval</fullName>
                </value>
                <value>
                    <fullName>Documents Previous Order</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Payor</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Object Id</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Audit Trackers</relationshipLabel>
        <relationshipName>Audit_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Audit Tracker</label>
    <nameField>
        <displayFormat>AT-{0000000}</displayFormat>
        <label>Audit Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>